# Supplemental-Material

./: CITATION.cff  LICENSE  Makefile  README.md  baseline_adapter_notes.md  pyproject.toml  repo_inventory.md  reproduction.md  requirements.txt
artifacts/paper_results/: RESULT_ALIGNMENT_NOTE.md  chronoqa_90_final_per_task.csv  chronoqa_90_final_report.md  chronoqa_90_final_summary_by_group.csv  chronoqa_90_final_summary_overall.csv  (+9 more)
baselines/: README.md  __init__.py  common.py  e2rag_reimpl.py  eventrag_reimpl.py  kg2rag_reimpl.py  registry.py  rog_reimpl.py  temporalsort.py
configs/: chronoqa_temporal_balanced_90_final.yaml  maven_ere_ct_90.yaml  private_benchmark.yaml  private_reimpl_baselines.yaml
docs/: GITHUB_REPO_DESCRIPTION.txt  REPO_OPTIMIZATION_CHANGELOG.md  REPRODUCIBILITY_SCOPE.md  SUPPLEMENTAL_MATERIAL_STATEMENT.md  chronoqa_metric_protocol.md  dataset_overview.md  private_metric_protocol.md  public_subset_notes.md  review_anonymity_note.md
optional_online_runner/: 04_run_responses_online.py  05_make_batch_requests.py  06_submit_batch.py  07_poll_batch.py  08_download_batch_output.py  08_parse_batch_output.py  README.md  openai_runner.py
prompts/: system_e2rag_reimpl.txt  system_eventrag_reimpl.txt  system_kg2rag_reimpl.txt  system_ours.txt  system_plain_llm.txt  system_rog_reimpl.txt  system_standard_rag.txt
scripts/: 01_prepare_private_benchmark.py  02_download_public_data.py  03_build_tasks.py  09_score_private.py  11_make_tables.py  14_select_public_samples.py
tests/: test_graph_reasoning.py  test_metrics.py  test_uncertainty.py
(+41 files in other folders)
